@@ -6,8 +6,8 @@ Manual fixes to do on the site.
 Upgrade to 3.30
 ---------------
 
-- Run the portal_setup upgrade steps.  There are steps at least for
-  minaraad.projects and collective.emaillogin.
+- Run the portal_setup upgrade steps.  There are steps for
+  Products.minaraad, minaraad.projects and collective.emaillogin.
 
 
 Upgrade to 3.28 [DONE]
