@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1007</version>
+  <version>1008</version>
 </metadata>
