@@ -195,8 +195,9 @@
                   The quicksearch box, normally placed at the top right
                 </div>
 
-                <tal:linkedin define="pcs context/@@plone_context_state"
-                              condition="python:pcs.is_portal_root() and pcs.is_view_template()">
+                <tal:linkedin
+                    define="pcs context/@@plone_context_state"
+                    condition="python:pcs.is_portal_root() and pcs.is_view_template() and context.show_linkedin">
                   <script src="http://www.linkedin.com/companyInsider?script&useBorder=yes"
                           type="text/javascript"></script>
                   <div id="linkedin-company-insider">
