@@ -10,6 +10,11 @@ branch must be ported to trunk as well.
 3.30 (unreleased)
 -----------------
 
+- Added a property show_linkedin on the portal root.  Also check this
+  property when determining if we should show the linkedin button.
+  Added upgrade step for this.
+  [maurits]
+
 - Only show the linkedin button when viewing the home page.
   [maurits]
 
